--- a/Pizzariadohabibi/src/main/resources/application.properties
+++ b/Pizzariadohabibi/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost/DEVSCOREAPI
+spring.datasource.url=jdbc:postgresql://localhost/localhost
 spring.datasource.username=postgres
 spring.datasource.password=Hasan
 spring.datasource.driverClassName=org.postgresql.Driver
