--- a/Pizzariadohabibi/src/main/resources/application.properties
+++ b/Pizzariadohabibi/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost/DEVSCOREAPI
+spring.datasource.url=jdbc:postgresql://localhost/pizzariadohabibi
 spring.datasource.username=postgres
-spring.datasource.password=Hasan
+spring.datasource.password=123456
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
